--- a/firstapp/index.html
+++ b/firstapp/index.html
@@ -1,18 +1,31 @@
+<!DOCTYPE html>
 <html>
-<head>
 
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta charset="UTF-8">
 </head>
+
 <body>
 
-    <div id="app" class="container">
-        <input type="text" v-on:input="changeTitle" />
-        <p>{{title}}</p>
+    <div class="container">
+        <div id="app">
+            <button v-on:click="increase(2, $event)">Click Me</button>
+            <p>{{counter}}</p>
+            <p v-on:mousemove="updateCooridates">Cooridate: {{x}} / {{y}}
+                - <span v-on:mousemove.stop="">Dead Spot</span>
+            </p>
+
+            <input type="text" v-on:keyup.enter.space="alertMe" />
+
+        </div>
     </div>
 
 
 
 
-    <script src="https://unpkg.com/vue@2.3.4"></script>
+    <script src="vue.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
