bind classes  and styles

--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -4,13 +4,25 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="UTF-8">
+    <style >
+        .demo{
+            width: 100px;
+            height: 100px;
+            background-color: gray;
+            display: inline-block;
+            margin: 10px;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="container">
         <div id="app">
-        
+            <div class="demo"></div>
+            <div class="demo"></div>
+            <div class="demo"></div>
+
         </div>
     </div>
 
